--- a/views/documents/lib/datasetForm.pug
+++ b/views/documents/lib/datasetForm.pug
@@ -105,6 +105,13 @@ div(id='datasetForm.screen')
         </tr>
         <tr class="custom-row">
           <td>
+            <div>RepoRecommender:</div>
+            <a href="https://dataseer.ai/reporecommender-form/" title="RepoRecommender help you know which repositories to choose" target="_blank"><i class="fas fa-question"></i></a>
+            <div key="dataset.repoRecommenderUrls" value="undefined">undefined</div>
+          </td>
+        </tr>
+        <tr class="custom-row">
+          <td>
             <div>Highlight this dataset:</div>
             <div key="dataset.highlight" value="false"></div>
             <input name="datasetForm.highlight" target="dataset.highlight" type="checkbox" class="form-control">
