update views links/scripts

--- a/views/root/documents/:id/datasets/layout.pug
+++ b/views/root/documents/:id/datasets/layout.pug
@@ -5,16 +5,16 @@
   <head>
     <title>#{conf.title}</title>
     <!-- include of global css dependencies -->
-    <link rel="stylesheet" type="text/css" href="/public/css/style.css"/>
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/style.css")
     <!-- include of app component css dependencies -->
-    <link rel="stylesheet" type="text/css" href="/views/documents/:id/datasets/app.css">
+    link(rel="stylesheet" type="text/css" href=conf.root + "/views/documents/:id/datasets/app.css">
     <!-- include old dependencies -->
-    <link rel="stylesheet" type="text/css" href="/public/css/datasets/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/public/css/datasets/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/public/css/datasets/style.css"/>
-    <link rel="stylesheet" type="text/css" href="/public/css/datasets/tei.css">
-    <link rel="stylesheet" type="text/css" href="/public/css/datasets/datasets.css">
-    <link rel="stylesheet" type="text/css" href="/public/js/datasets/pdf.js/build/components/pdf_viewer.css"/>
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/datasets/font-awesome.min.css")
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/datasets/bootstrap.min.css")
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/datasets/style.css")
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/datasets/tei.css")
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/datasets/datasets.css")
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/js/datasets/pdf.js/build/components/pdf_viewer.css")
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"/>
     <!--  -->
   </head>
@@ -39,36 +39,36 @@
         div.sub
     <!--  -->
     <!-- include of global js dependencies -->
-    <script src="/public/js/dependencies/vue.min.js"></script>
-    <script src="/public/js/dependencies/font-awesome.min.js"></script>
-    <script src="/public/js/dependencies/jquery.min.js"></script>
-    <script src="/public/js/dependencies/lodash.min.js"></script>
-    <script src="/public/js/dependencies/async.min.js"></script>
-    <script src="/public/js/conf/conf.js"></script>
-    <script src="/public/js/lib/url.js"></script>
-    <script src="/public/js/lib/api.js"></script>
-    <script src="/public/js/lib/accounts.js"></script>
-    <script src="/public/js/lib/notifications.js"></script>
-    <script src="/public/js/lib/dataHandler.js"></script>
-    <script src="/public/js/lib/params.js"></script>
-    <script src="/public/js/lib/clipboard.js"></script>
+    script(src=conf.root + "/public/js/dependencies/vue.min.js")
+    script(src=conf.root + "/public/js/dependencies/font-awesome.min.js")
+    script(src=conf.root + "/public/js/dependencies/jquery.min.js")
+    script(src=conf.root + "/public/js/dependencies/lodash.min.js")
+    script(src=conf.root + "/public/js/dependencies/async.min.js")
+    script(src=conf.root + "/public/js/conf/conf.js")
+    script(src=conf.root + "/public/js/lib/url.js")
+    script(src=conf.root + "/public/js/lib/api.js")
+    script(src=conf.root + "/public/js/lib/accounts.js")
+    script(src=conf.root + "/public/js/lib/notifications.js")
+    script(src=conf.root + "/public/js/lib/dataHandler.js")
+    script(src=conf.root + "/public/js/lib/params.js")
+    script(src=conf.root + "/public/js/lib/clipboard.js")
     <!-- include old dependencies -->
-    <script src="/public/js/datasets/bootstrap.min.js"></script>
+    script(src=conf.root + "/public/js/datasets/bootstrap.min.js")
     <script href="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="/public/js/datasets/randomColor.min.js"></script>
-    <script src="/public/js/datasets/colors.js"></script>
-    <script src="/public/js/datasets/documentView.js"></script>
-    <script src="/public/js/datasets/datasetForm.js"></script>
-    <script src="/public/js/datasets/datasetsList.js"></script>
-    <script src="/public/js/datasets/documentHandler.js"></script>
-    <script src="/public/js/datasets/pdf.js/build/generic/build/pdf.js"></script>
-    <script src="/public/js/datasets/pdf.js/build/generic/build/pdf.worker.js"></script>
-    <script src="/public/js/datasets/pdfViewer.js"></script>
-    <script src="/public/js/datasets/xmlViewer.js"></script>
-    <script src="/public/js/datasets/datasets.js"></script>
+    script(src=conf.root + "/public/js/datasets/randomColor.min.js")
+    script(src=conf.root + "/public/js/datasets/colors.js")
+    script(src=conf.root + "/public/js/datasets/documentView.js")
+    script(src=conf.root + "/public/js/datasets/datasetForm.js")
+    script(src=conf.root + "/public/js/datasets/datasetsList.js")
+    script(src=conf.root + "/public/js/datasets/documentHandler.js")
+    script(src=conf.root + "/public/js/datasets/pdf.js/build/generic/build/pdf.js")
+    script(src=conf.root + "/public/js/datasets/pdf.js/build/generic/build/pdf.worker.js")
+    script(src=conf.root + "/public/js/datasets/pdfViewer.js")
+    script(src=conf.root + "/public/js/datasets/xmlViewer.js")
+    script(src=conf.root + "/public/js/datasets/datasets.js")
     <!--  -->
     <!-- include of app component js dependencies -->
-    <script src="/views/documents/:id/datasets/app.js"></script>
+    script(src=conf.root + "/views/documents/:id/datasets/app.js")
   </body>
 </html>
