--- a/views/reports/html/bioRxiv.pug
+++ b/views/reports/html/bioRxiv.pug
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/public/css/reports/bioRxiv.css"/>
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/reports/bioRxiv.css")
     <title>DataSeer Data Discovery Report</title>
     -
       function formatDate(date) {
