--- a/views/root/privacy/layout.pug
+++ b/views/root/privacy/layout.pug
@@ -1,10 +1,10 @@
 extends ../../shared/layout.pug
 
 block head
-  <link rel="stylesheet" type="text/css" href="/views/privacy/app.css">
+  link(rel="stylesheet" type="text/css" href=conf.root + "/views/privacy/app.css")
 
 block app
   include ./app.pug
 
 block scripts
-  <script src="/views/privacy/app.js"></script>
+  script(src=conf.root + "/views/privacy/app.js")
