--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -5,11 +5,11 @@
   <head>
     <title>#{conf.title}</title>
     <!-- include of global css dependencies -->
-    <link rel="stylesheet" type="text/css" href="/public/css/dependencies/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/public/css/dependencies/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/public/css/style.css"/>
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/dependencies/font-awesome.min.css")
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/dependencies/bootstrap.min.css")
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/style.css")
     <!-- other services -->
-    <link rel="stylesheet" type="text/css" href="/public/css/dependencies/cookieconsent.min.css"/>
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/dependencies/cookieconsent.min.css")
     <!-- include of app component css dependencies -->
     block head
   </head>
@@ -20,26 +20,26 @@
     block app
     include ./footer.pug
     <!-- include of global js dependencies -->
-    <script src="/public/js/dependencies/vue.min.js"></script>
-    <script src="/public/js/dependencies/font-awesome.min.js"></script>
-    <script src="/public/js/dependencies/jquery.min.js"></script>
-    <script src="/public/js/dependencies/lodash.min.js"></script>
-    <script src="/public/js/dependencies/async.min.js"></script>
-    <script src="/public/js/dependencies/bootstrap.min.js"></script>
-    <script src="/public/js/conf/conf.js"></script>
-    <script src="/public/js/lib/url.js"></script>
-    <script src="/public/js/lib/api.js"></script>
-    <script src="/public/js/lib/accounts.js"></script>
-    <script src="/public/js/lib/notifications.js"></script>
-    <script src="/public/js/lib/dataHandler.js"></script>
-    <script src="/public/js/lib/params.js"></script>
-    <script src="/public/js/lib/clipboard.js"></script>
+    script(src=conf.root + "/public/js/dependencies/vue.min.js")
+    script(src=conf.root + "/public/js/dependencies/font-awesome.min.js")
+    script(src=conf.root + "/public/js/dependencies/jquery.min.js")
+    script(src=conf.root + "/public/js/dependencies/lodash.min.js")
+    script(src=conf.root + "/public/js/dependencies/async.min.js")
+    script(src=conf.root + "/public/js/dependencies/bootstrap.min.js")
+    script(src=conf.root + "/public/js/conf/conf.js")
+    script(src=conf.root + "/public/js/lib/url.js")
+    script(src=conf.root + "/public/js/lib/api.js")
+    script(src=conf.root + "/public/js/lib/accounts.js")
+    script(src=conf.root + "/public/js/lib/notifications.js")
+    script(src=conf.root + "/public/js/lib/dataHandler.js")
+    script(src=conf.root + "/public/js/lib/params.js")
+    script(src=conf.root + "/public/js/lib/clipboard.js")
     <!-- other services -->
-    <script src="/public/js/dependencies/cookieconsent.min.js" data-cfasync="false"></script>
-    <script src="/public/js/dependencies/crisp.js"></script>
-    <script src="/public/js/dependencies/cookies.js"></script>
-    <script src="/public/js/dependencies/userflow.js"></script>
-    <script src="/public/js/dependencies/userflow.init.js"></script>
+    script(src=conf.root + "/public/js/dependencies/cookieconsent.min.js" data-cfasync="false")
+    script(src=conf.root + "/public/js/dependencies/crisp.js")
+    script(src=conf.root + "/public/js/dependencies/cookies.js")
+    script(src=conf.root + "/public/js/dependencies/userflow.js")
+    script(src=conf.root + "/public/js/dependencies/userflow.init.js")
     <!-- include of app component js dependencies -->
     block scripts
   </body>
