update API wrapper on the front-end

--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -26,6 +26,7 @@
     script(src=conf.root + "/public/js/dependencies/lodash.min.js")
     script(src=conf.root + "/public/js/dependencies/async.min.js")
     script(src=conf.root + "/public/js/dependencies/bootstrap.min.js")
+    script(src=conf.root + "/public/js/dependencies/url-join.js")
     script(src=conf.root + "/public/js/conf/conf.js")
     script(src=conf.root + "/public/js/lib/url.js")
     script(src=conf.root + "/public/js/lib/api.js")
