update URL to handle non HTTP servers

--- a/views/reports/html/default.pug
+++ b/views/reports/html/default.pug
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>DataSeer Data Discovery Report</title>
-    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/reports/default.css")
+    link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/reports/default.css")
   </head>
   <body>
     <section>
