--- a/views/root/unauthorized/layout.pug
+++ b/views/root/unauthorized/layout.pug
@@ -1,10 +1,10 @@
 extends ../../shared/layout.pug
 
 block head
-  link(rel="stylesheet" type="text/css" href=conf.root + "/views/unauthorized/app.css")
+  link(rel="stylesheet" type="text/css" href=conf.pathname + "/views/unauthorized/app.css")
 
 block app
   include ./app.pug
 
 block scripts
-  script(src=conf.root + "/views/unauthorized/app.js")
+  script(src=conf.pathname + "/views/unauthorized/app.js")
