fixes: URLs & redirect (& tpl bugs)

--- a/views/root/documents/:id/datasets/lib/datasetForm.pug
+++ b/views/root/documents/:id/datasets/lib/datasetForm.pug
@@ -54,7 +54,7 @@ div(id='datasetForm.screen')
           <td>
             <div>re-use:</div>
             <div key="dataset.reuse" value="false"></div>
-            <input name="datasetForm.reuse" target="dataset.reuse" type="checkbox" class="form-control">
+            <input name="datasetForm.reuse" target="dataset.reuse" type="checkbox" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
@@ -75,7 +75,7 @@ div(id='datasetForm.screen')
           <td>
             <div>Custom Data type:</div>
             <div key="dataset.customDataType" value=""></div>
-            <input name="datasetForm.customDataType" target="dataset.customDataType" type="text" class="form-control">
+            <input name="datasetForm.customDataType" target="dataset.customDataType" type="text" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
@@ -114,7 +114,7 @@ div(id='datasetForm.screen')
           <td>
             <div>Highlight this dataset:</div>
             <div key="dataset.highlight" value="false"></div>
-            <input name="datasetForm.highlight" target="dataset.highlight" type="checkbox" class="form-control">
+            <input name="datasetForm.highlight" target="dataset.highlight" type="checkbox" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
@@ -125,21 +125,21 @@ div(id='datasetForm.screen')
         <tr class="custom-row">
           <td>
             <div>Enter a message here (or leave it empty so nothing will be displayed):</div>
-            <input name="datasetForm.notification" target="dataset.notification" value="" type="text" placeholder="Enter the message here or leave it empty" class="form-control">
+            <input name="datasetForm.notification" target="dataset.notification" value="" type="text" placeholder="Enter the message here or leave it empty" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
           <td>
             <div>Please provide a name for this dataset (e.g. 'sampling locations'):</div>
             <div key="dataset.name" value=""></div>
-            <input name="datasetForm.name" target="dataset.name" value="" type="text" placeholder="Provide the name here" class="form-control">
+            <input name="datasetForm.name" target="dataset.name" value="" type="text" placeholder="Provide the name here" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
           <td>
             <div>Please provide the DOI (or other stable link) to this dataset:</div>
             <div key="dataset.DOI" value=""></div>
-            <input name="datasetForm.DOI" target="dataset.DOI" value="" type="text" placeholder="Provide the DOI here" class="form-control">
+            <input name="datasetForm.DOI" target="dataset.DOI" value="" type="text" placeholder="Provide the DOI here" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
