--- a/views/root/documents/:id/datasets/layout.pug
+++ b/views/root/documents/:id/datasets/layout.pug
@@ -7,7 +7,9 @@
     <!-- include of global css dependencies -->
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/style.css")
     <!-- include of app component css dependencies -->
-    link(rel="stylesheet" type="text/css" href=conf.pathname + "/views/documents/:id/datasets/app.css">
+    link(rel="stylesheet" type="text/css" href=conf.pathname + "/views/documents/:id/datasets/app.css")
+    <!-- other services -->
+    link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/dependencies/cookieconsent.min.css")
     <!-- include old dependencies -->
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/datasets/font-awesome.min.css")
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/datasets/bootstrap.min.css")
@@ -15,7 +17,6 @@
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/datasets/tei.css")
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/datasets/datasets.css")
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/js/datasets/pdf.js/build/components/pdf_viewer.css")
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"/>
     <!--  -->
   </head>
   <body>
@@ -23,9 +24,7 @@
     <!-- include of app component -->
     include ./app.pug
     include ../../../../shared/footer.pug
-
     <!-- include old HTML elements -->
-
     if currentUser
       div(id='user_id' class='data' value=(currentUser._id))
       div(id='user_username' class='data' value=(currentUser.username))
@@ -52,6 +51,7 @@
     script(src=conf.pathname + "/public/js/lib/dataHandler.js")
     script(src=conf.pathname + "/public/js/lib/params.js")
     script(src=conf.pathname + "/public/js/lib/clipboard.js")
+    script(src=conf.pathname + "/public/js/dependencies/url-join.js")
     <!-- include old dependencies -->
     script(src=conf.pathname + "/public/js/datasets/bootstrap.min.js")
     <script href="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
