--- a/views/root/documents/:id/finish/layout.pug
+++ b/views/root/documents/:id/finish/layout.pug
@@ -8,6 +8,8 @@
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/dependencies/font-awesome.min.css")
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/dependencies/bootstrap.min.css")
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/style.css")
+    <!-- other services -->
+    link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/dependencies/cookieconsent.min.css")
     <!-- include of app component css dependencies -->
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/views/documents/:id/finish/app.css")
   </head>
@@ -23,6 +25,7 @@
     script(src=conf.pathname + "/public/js/dependencies/lodash.min.js")
     script(src=conf.pathname + "/public/js/dependencies/async.min.js")
     script(src=conf.pathname + "/public/js/dependencies/bootstrap.min.js")
+    script(src=conf.pathname + "/public/js/dependencies/url-join.js")
     script(src=conf.pathname + "/public/js/conf/conf.js")
     script(src=conf.pathname + "/public/js/lib/url.js")
     script(src=conf.pathname + "/public/js/lib/api.js")
