--- a/views/root/backoffice/organizations/app.pug
+++ b/views/root/backoffice/organizations/app.pug
@@ -109,7 +109,7 @@
       </div>
       <div class="collection-row header row align-items-center">
         <div class="col col-checkbox">
-          <input type="checkbox" @change="setSelectedStateOfAllItems($event)" />
+          <input ref="multipleSelectionsCheckbox" type="checkbox" @change="setSelectedStateOfAllItems($event)" />
         </div>
         <div class="col sorting" v-on:click.stop="sort($event)" property="name">Name</div>
         <div class="col">Properties</div>
