--- a/views/root/backoffice/roles/app.pug
+++ b/views/root/backoffice/roles/app.pug
@@ -100,7 +100,7 @@
       </div>
       <div class="collection-row header row align-items-center">
         <div class="col col-checkbox">
-          <input type="checkbox" @change="setSelectedStateOfAllItems($event)" />
+          <input ref="multipleSelectionsCheckbox" type="checkbox" @change="setSelectedStateOfAllItems($event)" />
         </div>
         <div class="col sorting" v-on:click.stop="sort($event)" property="label">Label</div>
         <div class="col sorting" v-on:click.stop="sort($event)" property="key">Key</div>
