--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -5,6 +5,7 @@
   <head>
     <title>#{conf.title}</title>
     <!-- include of global css dependencies -->
+    link(rel="icon" type="image/png" href=conf.pathname + "/public/favicon.ico")
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/dependencies/font-awesome.min.css")
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/dependencies/bootstrap.min.css")
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/style.css")
