--- a/views/root/documents/:id/datasets/layout.pug
+++ b/views/root/documents/:id/datasets/layout.pug
@@ -4,6 +4,7 @@
 <html>
   <head>
     <title>#{conf.title}</title>
+    link(rel="icon" type="image/png" href=conf.pathname + "/public/favicon.ico")
     <!-- include of global css dependencies -->
     link(rel="stylesheet" type="text/css" href=conf.pathname + "/public/css/style.css")
     <!-- include of app component css dependencies -->
