--- a/views/reports/html/default.pug
+++ b/views/reports/html/default.pug
@@ -108,7 +108,7 @@
             <tr class="content">
               if (dataset.type.url)
                 <td>
-                  a(href=dataset.type.url) #{`${dataset.type.label}${dataset.type.isCutom ? " (custom)" : dataset.reuse ? " (resuse)" : ""}`}
+                  a(href=dataset.type.url) #{`${dataset.type.label}${dataset.type.isCutom ? " (custom)" : dataset.reuse ? " (reuse)" : ""}`}
                 </td>
               else
                 <td>#{dataset.type.label}</td>
