fix: fix metadata step view

--- a/views/root/documents/:id/metadata/app.pug
+++ b/views/root/documents/:id/metadata/app.pug
@@ -31,21 +31,21 @@
       </div>
       <div class="row">
         <div class="col">
-          <div v-if="item.properties.metadata.submittingAuthor">
+          <div v-if="item.properties.metadata.submitting_author">
             <label class="property">Submiting Author:</label>
-            <label class="value">{{ item.properties.metadata.submittingAuthor }}</label>
+            <label class="value">{{ item.properties.metadata.submitting_author }}</label>
           </div>
-          <div v-if="item.properties.metadata.submittingAuthorEmail">
+          <div v-if="item.properties.metadata.submitting_author_email">
             <label class="property">Submiting Author Email:</label>
-            <label class="value">{{ item.properties.metadata.submittingAuthorEmail }}</label>
+            <label class="value">{{ item.properties.metadata.submitting_author_email }}</label>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <div v-if="item.properties.metadata.articleTitle">
+          <div v-if="item.properties.metadata.article_title">
             <label class="property">Article Title:</label>
-            <label class="value">{{ item.properties.metadata.articleTitle }}</label>
+            <label class="value">{{ item.properties.metadata.article_title }}</label>
           </div>
         </div>
       </div>
