update: update CSS of documents/ backoffice

--- a/views/root/backoffice/documents/app.pug
+++ b/views/root/backoffice/documents/app.pug
@@ -335,7 +335,7 @@
           <label class="text" v-if="item.properties.status === 'datasets'">Datasets validation</label>
           <label class="text" v-if="item.properties.status === 'finish'">Process Finished</label>
         </div>
-        <div class="col">
+        <div class="col article_title">
           | {{ item.properties.metadata.article_title }}
         </div>
         <div class="col text-truncate">
