--- a/views/root/backoffice/documents/:id/app.pug
+++ b/views/root/backoffice/documents/:id/app.pug
@@ -59,12 +59,10 @@
                 </div>
                 <div class="col">
                   <div class="form-check form-switch">
-                    <label for="visible" class="property bold">Visible</label>
-                    <input id="visible" class="form-check-input" type="checkbox" v-model="item.properties.visible" />
+                    <label for="visible" class="property bold"><input id="visible" class="form-check-input" type="checkbox" v-model="item.properties.visible" />Visible</label>
                   </div>
                   <div class="form-check form-switch">
-                    <label for="locked" class="property bold">Locked</label>
-                    <input id="locked" class="form-check-input" type="checkbox" v-model="item.properties.locked" />
+                    <label for="locked" class="property bold"><input id="locked" class="form-check-input" type="checkbox" v-model="item.properties.locked" />Locked</label>
                   </div>
                 </div>
               </div>
