--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -28,6 +28,7 @@
     script(src=conf.pathname + "/public/js/dependencies/bootstrap.min.js")
     script(src=conf.pathname + "/public/js/dependencies/url-join.js")
     script(src=conf.pathname + "/public/js/conf/conf.js")
+    script(src=conf.pathname + "/public/js/lib/number.js")
     script(src=conf.pathname + "/public/js/lib/url.js")
     script(src=conf.pathname + "/public/js/lib/api.js")
     script(src=conf.pathname + "/public/js/lib/accounts.js")
